--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "admin-lte": "^3.1.0",
     "craco-alias": "3.0.1",
     "firebase": "^8.6.5",
     "formik": "^2.2.9",
@@ -28,8 +27,9 @@
     "luxon": "^2.0.2",
     "material-table": "^1.69.3",
     "moment": "^2.29.1",
+    "node-sass": "6.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.4",
+    "react-bootstrap": "1.6.1",
     "react-dom": "^17.0.2",
     "react-leaflet": "^2.6.0",
     "react-moment": "^1.1.1",
@@ -40,10 +40,10 @@
     "react-uuid": "^1.0.2",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.42.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "admin-lte": "3.1.0",
     "husky": "7.0.2"
   },
   "eslintConfig": {
